# agent-harness

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  TODO.md  issues-lock.json  opencode.json  skills-lock.json  therms.md
benchmarks/: README.md  champion.py  corpus_qc.py  pyproject.toml  report.py  run.py
benchmarks/features/: environment.py  implement-it.feature  plan-it.feature
benchmarks/features/steps/: common_steps.py
benchmarks/harness/: models.py  registry.py  runner.py  skill_hash.py  skill_lint.py  skill_loader.py
benchmarks/harness/adapters/: __init__.py  _workspace.py  base.py  claude_code.py  opencode.py  pi_agent.py  workspace.py
benchmarks/harness/evaluators/: __init__.py  base.py  behave_evaluator.py  code_evaluator.py  llm_judge.py  metrics.py  plan_evaluator.py
benchmarks/harness/tracking/: __init__.py  base.py  findings.py  null_tracker.py  tracker.py
benchmarks/implementation/: 001-sandbox-adapters-summary.md  002-skill-snapshot-logging-summary.md  003-champion-challenger-registry-summary.md
benchmarks/skills-workflow/: HOW_IT_WORKS.md  README.md
benchmarks/skills-workflow/fixtures/invite_workflow_app/: README.md
benchmarks/skills-workflow/fixtures/invite_workflow_app/app/: invite_flow.py  invites.py
benchmarks/skills-workflow/fixtures/invite_workflow_app/docs/: support-ticket.md
benchmarks/skills-workflow/fixtures/invite_workflow_app/tests/: test_hidden_backend.py  test_hidden_fullstack.py  test_public_backend.py  test_public_fullstack.py
benchmarks/skills-workflow/scenarios/: invite-flow-pipeline.json
benchmarks/skills-workflow/schemas/: implementation-report.schema.json  issue-artifact.schema.json  run-result.schema.json  task.schema.json  validation-report.schema.json
benchmarks/skills-workflow/scripts/: harness_lib.py  prepare_workspace.py  run_checks.py  run_task.py  summarize_workspace.py  validate_task_defs.py
benchmarks/skills-workflow/tasks/backend-duplicate-invite-bugfix/: task.json
benchmarks/skills-workflow/tasks/backend-duplicate-invite-bugfix/fixtures/: README.md
benchmarks/skills-workflow/tasks/backend-duplicate-invite-bugfix/public-tests/: README.md
benchmarks/skills-workflow/tasks/backend-duplicate-invite-bugfix/rubrics/: artifact-requirements.json
benchmarks/skills-workflow/tasks/bundled-unrelated-request-splitting/: task.json
benchmarks/skills-workflow/tasks/bundled-unrelated-request-splitting/hidden-tests/: README.md  validate_routing_artifacts.py
benchmarks/skills-workflow/tasks/fullstack-invite-flow-vertical-slice/: task.json
benchmarks/skills-workflow/tasks/validation-only-false-confidence/: task.json
benchmarks/tasks/implement-it/: 001-token-bucket.json  002-lru-cache.json  003-event-bus.json  004-retry-decorator.json  005-merkle-tree.json
benchmarks/tasks/plan-it/: 001-rate-limiter.json  002-audit-log.json  003-background-jobs.json  004-search-feature.json  005-multi-tenancy.json
benchmarks/tests/: test_behave_integration.py  test_champion.py  test_code_evaluator.py  test_common_steps.py  test_opencode.py  test_pi_agent.py  test_plan_evaluator.py  test_registry.py  test_skill_hash.py  test_skill_lint.py  test_tracker.py  test_workspace.py
benchmarks/tests/fakes/: fake_workspace_manager.py
skills/skill-evaluator/runner/: Makefile  pyproject.toml
skills/skill-evaluator/runner/.semgrep/: python-quality.yml
skills/skill-evaluator/runner/runner/: discovery.py  eval_layout.py  evaluation.py  exceptions.py  invocation.py  judging.py  log_setup.py  metrics.py  models.py  ports.py  reporting.py  run.py  trigger.py
skills/skill-evaluator/runner/runner/adapters/: behave.py  claude_code.py  contract.py  (+2 more)
skills/skill-evaluator/runner/scripts/: check_test_module_parity.py
skills/skill-evaluator/runner/tests/: test_discovery.py  test_eval_layout.py  test_evaluation.py  test_exceptions.py  test_invocation.py  test_judging.py  test_log_setup.py  test_metrics.py  test_models.py  test_ports.py  test_reporting.py  test_run.py  test_trigger.py
(+316 files in other folders)
