[project]
name = "pi-skills-benchmarks"
version = "0.1.0"
description = "Benchmarking framework for pi-setup skills: precision, recall, accuracy, latency, token consumption"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mlflow>=2.15.0",
    "scipy>=1.13.0",
    "numpy>=2.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.8.0",
    "tiktoken>=0.7.0",
    "behave>=1.3.3",
    "pytest>=8.0.0",
]

[project.scripts]
bench-run = "benchmarks.run:main"
bench-report = "benchmarks.report:main"
bench-qc = "benchmarks.corpus_qc:main"
bench-promote = "champion:promote"
bench-compare = "champion:compare"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]
