[project]
name = "skill-evaluator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "behave==1.3.3",
    "opencode-ai==0.1.0a36",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "bandit==1.9.2",
    "deptry==0.24.0",
    "import-linter==2.4.0",
    "mypy==2.1.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "radon==6.0.1",
    "ruff==0.15.15",
    "semgrep==1.141.0",
    "types-pyyaml",
    "vulture==2.14",
]

[project.scripts]
skill-eval = "runner.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[tool.uv]
# Supply-chain attack mitigation: packages published after this date are excluded
# during resolution. When upgrading deps, advance this date but keep it at least
# 7 days behind the current date so newly-published packages have time for
# community scrutiny before we pick them up.
exclude-newer = "2026-05-30T00:00:00Z"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "PIE", "RET", "ARG",
    "PL", "TRY", "LOG", "ANN",
]
# E501 is enforced by the formatter, not the linter
ignore = [
    "E501",
    # CLI/eval assertions should stay compact and readable.
    "PLR2004",
    "PLR0913",
    "S101",
    "TRY003",
    # Private step functions are exercised by Behave rather than imported directly.
    "ANN401",
]

[tool.ruff.lint.isort]
known-first-party = ["runner"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_decorators = false
warn_return_any = true
warn_unused_configs = true
files = ["runner", "../../dataviz/evals", "tests", "scripts"]

# Ignore missing stubs for third-party libs that don't ship them.
[[tool.mypy.overrides]]
module = ["behave.*"]
ignore_missing_imports = true

[tool.radon]
# Report functions with C or worse complexity; fail behavior lives in Makefile.
cc_min = "C"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["runner"]

[tool.coverage.report]
show_missing = true

[tool.deptry]
extend_exclude = ["../../dataviz/evals/fixtures", "../../dataviz/evals/reports"]

[tool.deptry.per_rule_ignores]
# The runner executes Behave through `python -m behave`, so deptry cannot see it
# as a normal Python import even though it is a runtime dependency.
DEP002 = ["behave"]

[tool.bandit]
exclude_dirs = ["../../dataviz/evals/fixtures", "../../dataviz/evals/reports"]
skips = ["B101"]

[tool.importlinter]
root_package = "runner"

[[tool.importlinter.contracts]]
name = "Ports stay independent"
type = "forbidden"
source_modules = ["runner.ports"]
forbidden_modules = ["runner.adapters", "runner.run"]

[[tool.importlinter.contracts]]
name = "Adapters do not import orchestration"
type = "forbidden"
source_modules = ["runner.adapters"]
forbidden_modules = ["runner.run", "runner.evaluation"]
